# ur5e_pick_and_place

./: .gitignore  README.md  frames_2025-04-21_00.24.00.gv  frames_2025-05-23_06.02.48.gv  frames_2025-05-23_06.52.02.gv  frames_2025-05-23_06.52.15.gv  frames_2025-05-24_00.32.59.gv  frames_2025-05-24_01.26.47.gv  frames_2025-05-26_16.20.30.gv
install/: local_setup.sh  setup.sh
install/move_test_cpp/lib/move_test_cpp/: move_test_2_cpp_node  move_test_cpp_node  pick_and_place_arg_cpp_node  pick_and_place_cpp_node
install/move_test_cpp/share/move_test_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml
install/move_test_cpp/share/move_test_cpp/cmake/: move_test_cppConfig-version.cmake  move_test_cppConfig.cmake
install/move_test_cpp/share/move_test_cpp/environment/: ament_prefix_path.dsv  path.dsv
install/pick_and_place_pkg/share/pick_and_place_pkg/: package.bash  package.ps1  package.sh  package.zsh
install/ur_moveit_config/share/ur_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_moveit_config/share/ur_moveit_config/cmake/: ur_moveit_configConfig-version.cmake  ur_moveit_configConfig.cmake
install/ur_moveit_config/share/ur_moveit_config/config/: chomp_planning.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  ur_servo.yaml
install/ur_moveit_config/share/ur_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
install/ur_moveit_config/share/ur_moveit_config/launch/: ur_moveit.launch.py
install/ur_moveit_config/share/ur_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
install/ur_simulation_gz/share/ur_simulation_gz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_simulation_gz/share/ur_simulation_gz/cmake/: ur_simulation_gzConfig-version.cmake  ur_simulation_gzConfig.cmake
install/ur_simulation_gz/share/ur_simulation_gz/config/: ur_controllers.yaml
install/ur_simulation_gz/share/ur_simulation_gz/environment/: ament_prefix_path.dsv  path.dsv
install/ur_simulation_gz/share/ur_simulation_gz/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
install/ur_simulation_gz/share/ur_simulation_gz/urdf/: ur_gz.ros2_control.xacro  ur_gz.urdf.xacro  ur_gz_setup_test.urdf.xacro
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/move_test_cpp/share/move_test_cpp/: package.dsv  package.ps1  (+2 more)
src/log/: latest_build
src/move_test_cpp/: CMakeLists.txt
src/move_test_cpp/include/move_test_cpp/: pick_place_executor.hpp
src/move_test_cpp/src/: demo_controller.cpp  gripper_listener.cpp  move_test.cpp  move_test_2.cpp  pick_and_place.cpp  pick_and_place_arg.cpp  pick_place_executor.cpp
src/pick_and_place_pkg/: package.xml  setup.py
src/pick_and_place_pkg/pick_and_place_pkg/: pick_and_place.py
src/ur_moveit_config/: CMakeLists.txt
src/ur_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_ur1.yaml  moveit_controllers_ur2.yaml  planning_pipeline_config.yaml  ur1_moveit.rviz  ur1_moveit_controllers.yaml  ur2_moveit.rviz  ur2_moveit_controllers.yaml  ur_servo.yaml
src/ur_moveit_config/launch/: dual_moveit.lauch.py  ur_moveit.launch.py
src/ur_moveit_config/srdf/: dual.srdf.xacro  dual_macro.srdf.xacro  ur.srdf.xacro  ur_macro.srdf.xacro
(+20 files in other folders)
